# Games101Homework

./: .clang-format  .gitignore  README.md
Homework1/Assignment1/: CMakeLists.txt  main.cpp
Homework1/Assignment1/.cache/clangd/index/: Triangle.cpp.4FCD9132B330E7A9.idx  Triangle.hpp.51A19F9F1B34EAB4.idx  main.cpp.79B89C3DD305A501.idx  rasterizer.cpp.7AF3DCA745F74705.idx  rasterizer.hpp.1D706E68F4142849.idx
Homework2/Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework2/code/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework2/code/.cache/clangd/index/: Triangle.cpp.8A0B9D80D25216FB.idx  Triangle.hpp.A4077487B657448F.idx  global.hpp.E17E8684FA944403.idx  main.cpp.AEAB4601B8C1A7B2.idx  rasterizer.cpp.C8CCC979FEC0FDF4.idx  rasterizer.hpp.2B96F42649950A6A.idx
Homework3/Assignment3/: CMakeLists.txt  OBJ_Loader.h  main.cpp  rasterizer.cpp  rasterizer.hpp
